[package]
name = "anybox"
version = "0.1.1"
edition = "2021"
authors = ["Nils Martel"]
description = "Library providing a plain and simple datatype that can hold data of arbitrary type."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nilsmartel/anybox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
